--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/nacho2487/dwelldevelopers-site#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "nodemailer": "^6.7.0",
     "react": "^17.0.2",
     "react-declarative-head": "^1.0.5",
     "react-dom": "^17.0.2"
